--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.comment-list-item .comment-list-item::before {
+  content: "";
+  height: 24px;
+  width: 24px;
+  position: absolute;
+  inset-inline-start: -2px;
+  inset-block-start: 24px;
+  -webkit-border-start: 2px solid hsl(var(--nc));
+  border-inline-start: 2px solid hsl(var(--nc));
+  border-bottom: 2px solid hsl(var(--nc));
+  border-end-start-radius: 10px;
+}
+
+.comment-list-item:has(ul) .comment::after {
+  content: "";
+  height: calc(100% - 74px / 2);
+  inset-block-start: 74px;
+  width: 2px;
+  background: hsl(var(--nc));
+  position: absolute;
+  inset-inline-start: 24px;
+}
+
+.comment-list-item:has(ul) .comment-list-item {
+  padding-inline-start: 12px;
+}
